plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'com.jfrog.bintray' version '1.8.4'
    id 'checkstyle'
}

repositories {
    jcenter()
    mavenLocal()
}

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '0.7.1'

dependencies {
    compile 'log4j:log4j:[1.2,)'
    compile 'org.opencadc:cadc-util:[1.2,)'

    testCompile 'junit:junit:[4.0,)'
}

apply from: '../opencadc.gradle'

